--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_PASS=martina123
 PORT=9000
 MONGODB_URI=mongodb://henrymatch:martina123@henrymatch-shard-00-00.wotfr.mongodb.net:27017,henrymatch-shard-00-01.wotfr.mongodb.net:27017,henrymatch-shard-00-02.wotfr.mongodb.net:27017/?ssl=true&replicaSet=atlas-kfcudp-shard-0&authSource=admin&retryWrites=true&w=majority
+USERMAIL=henrymatch2022@gmail.com
+PASS=nabxqdokfmpwoxfr
